base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eimmo-backend-api
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: eimmo-backend
    component: api
