base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: eimmo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dev-eimmo-ip
spec:
  rules:
    - host: temp-eimmo-api.bluewhale.team
      http:
        paths:
          - path: /*
            backend:
              serviceName: eimmo-backend-api
              servicePort: 8080
